Fix tinder bugs (2)
- The client boxes had a fixed height. Client names that spanned 2 lines (such as "Internet Explorer 6 Windows 2003") bumped the <span>since</span> in the overflow and thus invisible. Removed the height.

--- a/css/site.css
+++ b/css/site.css
@@ -292,7 +292,6 @@ ul.clients li {
 	padding: 3px;
 	border: 1px solid #E5E5E5;
 	background: #F5F5F5;
-	height: 24px;
 	width: 180px;
 	font-size: 10px;
 }
